# rust-react-native

./: .gitignore  App.tsx  README.md  app.json  benchmark.ts  package.json  realmdb.ts  tsconfig.json
android/: settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/debug/java/com/rustreacttest/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rustreacttest/: MainActivity.java  MainApplication.java  MobileAppBridge.java  MobileAppPackage.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/rustreacttest/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/rustreacttest.xcodeproj/: project.pbxproj
ios/rustreacttest.xcodeproj/xcshareddata/xcschemes/: rustreacttest.xcscheme
ios/rustreacttestTests/: rustreacttestTests.m
rust/server/: Cargo.toml  copy_android.sh  makefile
rust/server/migrations/sqlite/20210812_Init/: down.sql  up.sql
rust/server/src/: db.rs  dbhandler.rs  lib.rs  models.rs  schema.rs  simpleserver.rs
